first-second section

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header> 
         <div class="toggle-btn"></div>
         <nav>
-            <img class="logo" src="../undefined - Imgur.png">
+            <img class="logo" src="./undefined - Imgur.png">
             <ul type="none">
-                <li><img class="flag" src="../flag.png" /></li>
+                <li><img class="flag" src="./flag.png" /></li>
                 <li><a href="#">Pokedex <i class="fa fa-caret-down"></i></a> </li>
                 <li><a href="#">Video games <i class="fa fa-caret-down"></i></a> </li>
                 <li><a href="#">Ecard games</a> </li>
