--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
         </div>
         </div>
     </div>
-    </section>
+</section>
 
     <!-- section-10 -->
 
-    <section id="trainers-section">
+<section id="trainers-section">
         <h3>Let's know about pokemon trainers</h3>
 
     <div class="poke-year">
@@ -389,10 +389,10 @@
     </div>
 
 
-    </section>
+</section>
 
     <!-- section-11 generation -->
-    <section id="gen-cards">
+<section id="gen-cards">
         <h1 >Generation - Cards</h1>
         <div class="cards_container">
             <div class="card">
@@ -472,16 +472,50 @@
               </div>
             </div>
           </div>
-    </section>
+</section>
 
-          <!-- <section id="input-email-section"><br>
-            <h2 class="code-line" data-line-start=254 data-line-end=255 ><a id="Enter_your_email_to_subscribe_pokemon_channel_254"></a>Enter your email to subscribe pokemon channel</h2>
-            <input type="text" class="input-email" placeholder="you@example.com"> 
-            <button class="submit-button">Submit</button><br><br>
-          </section>    -->
+    <!-- section-12 -->
+<section id="email-section">
+        <h2>Enter your email to subscribe pokemon channel</h2>
+        <input type="text" class="input-email" placeholder="you@example.com"> 
+        <button class="submit-button">Submit</button>
+</section>   
+
+<!-- section -13 -->
+<section id="pokemon-games">
+ <h3 class="poke-games-heading">Pokemon games</h3>
+
+<div class="poke-games-card-row">
+    <div class="poke-games-card-column">
+      <div class="poke-games-card">
+      <p class="poke-game-title">Pokémon GO <i class="fas fa-gamepad"></i></p>
+      <p>Pokémon Go is a 2016 augmented reality mobile game developed.</p>
+      <p><img src="./image-3.jpeg" alt="" class="poke-game-img"></p>
+      <p>Developer: Niantic</p>
+      </div>
+    </div>
+
+    <div class="poke-games-card-column">
+      <div class="poke-games-card">
+    <p class="poke-game-title">Pokémon: Let’s Go, Pikachu! <i class="fas fa-gamepad"></i></p>
+    <p>Take a Pokémon™ journey to the Kanto region with your energetic partner, Pikachu!</p>
+    <p><img src="./game-2.jpeg" alt="" class="poke-game-img"></p>
+    <p>Publishers: Nintendo, The Pokémon Company</p>
+     </div>
+    </div>
+    <div class="poke-games-card-column">
+      <div class="poke-games-card">
+      <p class="poke-game-title">Pokémon Sleep <i class="fas fa-gamepad"></i></p>
+      <p>Pokémon Sleep is an upcoming mobile game for Android and iOS, as part of the Pokémon series.</p>
+      <p><img src="./game-1.png" alt="" class="poke-game-img"></p>
+      <p>Publisher: The Pokémon Company</p>
+      </div>
+    </div>
+</div>
+ <button class="see-more-button">See More Here</button>
+</section>
 
 
-        
 
 </body>
 </html>
