--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header> 
         <div class="toggle-btn"></div>
         <nav>
-            <img class="logo" src="./undefined - Imgur.png">
+            <img class="logo-edyst" src="./undefined - Imgur.png">
             <ul type="none">
                 <li><img class="flag" src="./flag.png" /></li>
                 <li><a href="#">Pokedex <i class="fa fa-caret-down"></i></a> </li>
@@ -40,7 +40,7 @@
 
 <!--section-3 pocket Monsters section -->
 <section id="monster">
-    <div id="section-2">
+    <div class="section-2">
         <h2>What are Pocket Monsters?</h2>
         <p>
             Pokémon is a series of video games developed by Game Freak and published by Nintendo and The Pokémon Company as part of 
@@ -52,7 +52,7 @@
                     Let us know some pokemon types.
         </p>
     </div>    
-    <div id="pokemon-types" >
+    <div class="pokemon-types" >
         <!-- 1. Type-WATER -->
 
         <div id="type-water">
@@ -515,6 +515,96 @@
  <button class="see-more-button">See More Here</button>
 </section>
 
+<!-- section-14 -->
+<section id="designers-section">
+    <div class="section-2">
+        <h2>Designers</h2>
+    </div>
+   
+    <div class="pokemon-types">
+      
+      <div class="des-1">
+        <img src="./des-1.jpeg" alt="" class="designer-photo">
+        <p class="designer-name">Junichi Masuda</p>
+        <p class="sub-heading">Japanese video game designer</p>
+        <p class="designer-about">&quot;Junichi Masuda is a Japanese video game composer, director, designer, producer, singer, and programmer best known for his work in the Pokémon franchise. He is a member of the Game Freak board of directors, and has been employed at the company since 1989 when he founded it along Satoshi Tajiri and Ken Sugimori &quot;</p>
+      </div>
+      <div class="des-2">
+        <img src="./des-2.jpeg" alt="" class="designer-photo">
+        <p class="designer-name">Shigeki Morimoto</p>
+        <p class="sub-heading">Game designer</p>
+        <p class="designer-about">&quot;Shigeki Morimoto is a game designer and programmer currently working at Game Freak. He has been involved in nearly every main series Pokémon game, since Pokémon Red and Blue Versions where he was a programmer, and the creator of the battle system and the Pokémon “Mew”. &quot;</p>
+      </div>  
+      <div class="des-3">
+        <img src="./des-3.png" alt="" class="designer-photo">
+        <p class="designer-name">Ken Sugimori</p>
+        <p class="sub-heading">Japanese video game designer</p>
+        <p class="designer-about">&quot;Ken Sugimori is a Japanese video game designer, illustrator, manga artist, and director. He is most famous as the character designer and art director for the Pokémon franchise. Sugimori is also credited with the art direction for other titles, including Pulseman &quot;</p>
+      </div>
+    </div>
+  </section>
+<!-- section-15 -->
+<section id="logos">
+    <h3 class="logo-heading">Logos</h3>
+    <p class="logo-sub-heading">Pokémon is short for the original Japanese title of Pocket Monsters. Created by. Satoshi Tajiri.</p>
+    <div id="main-logos">
+      <div>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+      </div>
+      <div>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+      </div>  
+      <div>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+        <p><img src="./GVRQFYB.png" alt="" class="logo-div-logos"></p>
+      </div>
+    </div>
+  </section>
+  
+<!-- sectio-16 -->
+
+<section id="know-more-button"><br>
+    <h3 class="want-to-know-more">Want to know more?</h3>
+    <button class="know-more-button">Click Here</button>
+  </section>
+
+  <!-- footer section-18 -->
+  <footer>
+    <div id="main-footer">
+      <div style="color: grey;"><p style="padding:3%;">Pokemon Company</p>
+            <ul>
+            <li><a href="#">What’s New</a></li>
+            <li><a href="#">Guide</a></li>
+            <li><a href="#">Customer Service</a></li>
+            <li><a href="#">About our company</a></li>
+            </ul></div>
+      <div style="color: grey;"><p style="padding:3%;">For Companies</p>
+            <ul>
+            <li><a href="#">Policy</a></li>
+            <li><a href="#">Terms of use</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Support</a></li>
+            </ul></div>  
+      <div style="color: grey;"><p style="padding:3%;">Resources</p>
+            <ul>
+            <li><a href="#">Request a Feature</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Support</a></li>
+            </ul></div>
+      <div style="color: grey;"> <p style="padding:3%;">Social</p>
+              <p><a href="#"style="color: white; text-decoration: none;"><i class="fab fa-instagram"></i> &nbsp;&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;&nbsp;&nbsp;&nbsp;<i class="fab fa-twitter"></i></a></p>
+              <p style="padding:2%;">1201 © Poke</p>
+              <p><a href="#" style="text-decoration: none; color: white; padding-top:2%;">Buy me a coffee <i class="fas fa-coffee"></i></a></p>
+      </div>
+    </div>
+  </footer>
+    
 
 
 </body>
