all-section(19)-done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <!--section-3 pocket Monsters section -->
 <section id="monster">
+<div class="monster-div">    
     <div class="section-2">
         <h2>What are Pocket Monsters?</h2>
         <p>
@@ -95,9 +96,11 @@
 
             </div>
     </div>
+</div>      
 </section>
     <!-- section-4  -->                
 <section id="statistics">
+<div class="stat-div">   
     <div class="stat">
         <h2>Statistics on Pokemon Go</h2>
     </div>
@@ -134,11 +137,13 @@
             </div> 
         </div> 
     </div>
+</div>     
 </section>
 
 <!-- section-5 -->
 <section id="poke-section">
-    <h3>2020 Pokémon of the Year Revealed</h3>
+<div class="poke-section-div">      
+      <h3>2020 Pokémon of the Year Revealed</h3>
 
     <div class="poke-year">
         <div class="poke-one">
@@ -197,6 +202,7 @@
             </div>
         </div>
     </div>
+</div>    
 </section>
 
 
@@ -236,7 +242,7 @@
             <h4>Type chart, effectiveness and weakness explained in Pokémon Go</h4>
             <p>Pokémon battles appear in most forms of Pokémon media, being the central gameplay aspect of the core series 
                 games, as well as being a constant focus of the anime.
-            </p><br><br>
+            </p>
 
             <p>
                 Pokémon Go's Types are exactly the same as those in the main Pokémon games, but the effect of those type matchups is slightly different: in brief, 
@@ -244,7 +250,7 @@
             </p>   
         </div>  
 
-    <div class="table-div">
+    <div id="table-div">
         <table>   
               <tr>
                 <th>Type</th>
@@ -269,25 +275,23 @@
                 <td>Fighting, Bug, Grass</td>
                 <td>Rock, Steel, Electric</td>
                 <td>Fighting, Ground, Bug, Grass</td>
-              </tr>
-              <!-- <tr>
-                <td>Poison</td>
-                <td>Grass, Fairy</td>
-                <td>Poison, Ground, Rock, Ghost, Steel</td>
-                <td>Fighting, Poison, Grass, Fairy </td>
-              </tr>
-               <tr>
-                <td>Ground</td>
-                <td>Poison, Rock, Steel, Fire, Electric</td>
-                <td>Flying, Bug, Grass</td>
-                <td>Poison, Rock, Electric</td>
-              </tr> -->
+            </tr>
+            <tr>
+              <td>Poison</td>
+              <td>Grass, Fairy</td>
+              <td>Poison, Ground, Rock, Ghost, Steel</td>
+              <td>Fighting, Poison, Grass, Fairy </td>
+            </tr>
+             <tr>
+              <td>Ground</td>
+              <td>Poison, Rock, Steel, Fire, Electric</td>
+              <td>Flying, Bug, Grass</td>
+              <td>Poison, Rock, Electric</td>
+            </tr>
             </table>
-    </div>
-    <div id="para-3">
-        <p>Pokémon Go in 2020 continues to add new features, such the arrival of the Go Battle League, Remote Raids and the trade evolution feature. 
-            There are also planned changes to PokéCoins on the way. Meanwhile, coming soon is the Johto Throwback quest.
-        </p>
+            <p>Pokémon Go in 2020 continues to add new features, such the arrival of the Go Battle League, Remote Raids and the trade evolution feature. 
+                There are also planned changes to PokéCoins on the way. Meanwhile, coming soon is the Johto Throwback quest.
+            </p>
     </div>
 </div>
 </section>
@@ -322,6 +326,7 @@
     <!-- section-10 -->
 
 <section id="trainers-section">
+<div class="section-10-div">    
         <h3>Let's know about pokemon trainers</h3>
 
     <div class="poke-year">
@@ -388,11 +393,12 @@
         </div>
     </div>
 
-
+</div> 
 </section>
 
     <!-- section-11 generation -->
 <section id="gen-cards">
+<div class="gen-cards-div">    
         <h1 >Generation - Cards</h1>
         <div class="cards_container">
             <div class="card">
@@ -472,6 +478,7 @@
               </div>
             </div>
           </div>
+</div>          
 </section>
 
     <!-- section-12 -->
@@ -483,17 +490,10 @@
 
 <!-- section -13 -->
 <section id="pokemon-games">
+<div class="pokemon-games-div">    
  <h3 class="poke-games-heading">Pokemon games</h3>
-
 <div class="poke-games-card-row">
-    <div class="poke-games-card-column">
-      <div class="poke-games-card">
-      <p class="poke-game-title">Pokémon GO <i class="fas fa-gamepad"></i></p>
-      <p>Pokémon Go is a 2016 augmented reality mobile game developed.</p>
-      <p><img src="./image-3.jpeg" alt="" class="poke-game-img"></p>
-      <p>Developer: Niantic</p>
-      </div>
-    </div>
+    
 
     <div class="poke-games-card-column">
       <div class="poke-games-card">
@@ -503,6 +503,15 @@
     <p>Publishers: Nintendo, The Pokémon Company</p>
      </div>
     </div>
+
+    <div class="poke-games-card-column">
+        <div class="poke-games-card">
+        <p class="poke-game-title">Pokémon GO <i class="fas fa-gamepad"></i></p>
+        <p>Pokémon Go is a 2016 augmented reality mobile game developed.<br>Pokemon!!</p>
+        <p><img src="./image-3.jpeg" alt="" class="poke-game-img"></p>
+        <p>Developer: Niantic</p>
+        </div>
+      </div>
     <div class="poke-games-card-column">
       <div class="poke-games-card">
       <p class="poke-game-title">Pokémon Sleep <i class="fas fa-gamepad"></i></p>
@@ -513,10 +522,12 @@
     </div>
 </div>
  <button class="see-more-button">See More Here</button>
+</div> 
 </section>
 
 <!-- section-14 -->
 <section id="designers-section">
+<div class="designer-section-div">     
     <div class="section-2">
         <h2>Designers</h2>
     </div>
@@ -542,6 +553,7 @@
         <p class="designer-about">&quot;Ken Sugimori is a Japanese video game designer, illustrator, manga artist, and director. He is most famous as the character designer and art director for the Pokémon franchise. Sugimori is also credited with the art direction for other titles, including Pulseman &quot;</p>
       </div>
     </div>
+</div>    
   </section>
 <!-- section-15 -->
 <section id="logos">
